feat: navbar created

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <title>Prueba de git</title>
 </head>
 <body>
-    <header><h1>prueba de git</h1></header>
+    <header><h1>prueba de git</h1>
+    <a href="#">HOME</a>
+    <a href="#">ABOUT</a>
+    <a href="#">CONCTACT</a>
+    </header>
     <main><section><h2>Subtitulo</h2>(article>h3{tema del articulo}+p{lorem})</section></main>
 </body>
 </html>
